theme/assets/styles/layouts/_header.scss
.navbar-nuitdebout {
  @extend .navbar-default;
  background: white;
  transition: all 0.3s ease;

  padding: 0 10px;

  &-logo {
    width: 50px;
  }
  &-bloginfo {
    position: relative;
    font-family: 'CommuneB1San31';
    text-transform: uppercase;
    letter-spacing: 1.1px;
    line-height: 1 !important;
    font-size: 32px !important;
    $navbar-space: (($navbar-height - 32px) / 2);
    padding: ($navbar-space + 4px) $navbar-padding-horizontal ($navbar-space - 4px) !important;
    color: #111 !important;
    &:before {
      padding-top: 4px;
      content: '//';
      position: absolute;
      left: -10px;
      top: 50%;
      transform: translateY(-50%);
      vertical-align: middle;
    }
  }
  .social-icons {
    line-height: 1;
    $padding-vertical: (($navbar-height - 33px) / 2);
    padding: $padding-vertical $navbar-padding-horizontal;
  }

  .navbar-nav-content {
    clear: both;

    border-top: 1px solid #eee;

    .navbar-nav {

      text-align: center;
      float: none;

      & > li {
        display: inline-block;
        float: none;

        @media (max-width: $screen-xs-max) {
          display: block;
        }

        & > a {
          border-bottom: 5px solid transparent;
          padding: 10px 0;
          margin: 0 30px;
        }




        &:hover, &.open {
          a {
            border-color: $light-blue;
          }
        }

      }
    }
  }

  // .current-menu-item
  .navbar-nav > .active > a,
  .navbar-nav > .active > a:hover,
  .navbar-nav > .active > a:active {
    background: none;
  }
  .navbar-nav > .active > a:hover {
    color: #424242
  }
}

body.logged-in{
  .navbar-nuitdebout {
         &-fixed {
            position: fixed;
            left: 0px;
            top: 30px;
          }

  }

}

.text-right {
    text-align: right;
}

.navbar-brand {
  padding: (($navbar-height - 50) / 2) $navbar-padding-horizontal;
}

.menu-top {
  > li > a {
    color: #bdbdbd;
    text-transform: uppercase;
    background: none;
  }
}

.header-placeholder {
  display: none; // waiting until smaller height nav is implemented
  height: 115px;
  width: 100%;
  &.header-placeholder--with-events {
    height: 151px;
  }
}

@media (max-width: $screen-xs-max) {
  .header-placeholder {
    height: 70px;
    &.header-placeholder--with-events {
      height: 92px;
    }
  }
}

